# frontend-tourism-service_RIP_2_

./: .gitignore  Lab2-README.md  Lab4-README.md  README.md  index.html  manifest.json  manifest.webmanifest  registerSW.js  sw.js
.github/workflows/: deploy.yml
LR-2/: docker-compose.yml  go.mod  main.go  nginx.conf
LR-2/cmd/migrate/: main.go
LR-2/data/: devices.go  requests.go
LR-2/internal/handlers/: devices.go
LR-2/models/: model.go
LR-2/static/css/: style.css
LR-2/storage/: minio.go
LR-2/templates/: device_detail.html  devices.html  layout.html  request.html  smart_cart.html  smart_device_detail.html  smart_devices.html
LR-4/: docker-compose.yml  main.go  nginx.conf  package-lock.json
LR-4/async-service/: package-lock.json  package.json
LR-4/async-service/src/: app.module.ts  main.ts
LR-4/cmd/migrate/: main.go
LR-4/docs/: swagger.yaml
LR-4/internal/middleware/: auth.go  auth_lua.go  cors.go  logging.go  validation.go
LR-4/internal/models/: model.go
LR-4/internal/session/: session_lua.go
LR-4/internal/storage/: minio.go
LR-4/migrations/: 008_add_traffic_calculated.sql
LR-4/react-frontend/: .env  .env.production  .gitignore  PWA-README.md  package-lock.json  package.json  vite.config.ts
LR-4/react-frontend/dev-dist/: sw.js
LR-4/react-frontend/src/: App.tsx  (+3 more)
LR-4/react-frontend/src-tauri/: Cargo.toml  tauri.conf.json
LR-4/react-frontend/src-tauri/capabilities/: default.json
LR-4/react-frontend/src-tauri/src/: main.rs
assets/: index-6-pPyR95.js
lab8/: db.sqlite3
lab8/app/: views.py
lab8/lab8/: settings.py  urls.py
(+37 files in other folders)
